@@ -3,7 +3,6 @@ main: me.exphc.SilkSpawners.SilkSpawners
 version: 1.4
 url: http://dev.bukkit.org/server-mods/silkspawners/
 description: pick up and move monster spawners using silk touch
-softdepend: [Spout]
 commands:
     silkspawners:
         aliases: [silkspawner, ss, spawner]
@@ -46,3 +45,4 @@ permissions:
         default: false
 softdepend:
     - WorldGuard
+    - Spout
